--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,15 @@
 {
   "name": "LifeFix",
   "short_name": "LifeFix",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#E8F5E9",
   "theme_color": "#43A047",
-  "icons": []
+  "icons": [
+    {
+      "src": "icon.svg",
+      "sizes": "192x192 512x512",
+      "type": "image/svg+xml"
+    }
+  ]
 }
